fix: channel tabs overflow in channel page

--- a/src/components/authorFeedMobile/authorFeedMobile.scss
+++ b/src/components/authorFeedMobile/authorFeedMobile.scss
@@ -3,9 +3,7 @@
   flex-direction: column;
   gap: 30px;
   padding: 15px 11px;
-  height: calc(100svh - 61px - 45px);
   width: 100%;
-  overflow-y: auto;
 }
 
 .videoCardWrapperMobile {
